--- a/package.json
+++ b/package.json
@@ -248,14 +248,17 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "bootstrap": "^4.6.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "regenerator-runtime": "^0.13.5",
+    "regenerator-runtime": "^0.13.7",
     "source-map-support": "^0.5.19"
   },
   "devEngines": {
